@@ -18,7 +18,12 @@ IDEAS:
 Orgasm/Load/Preg code
 
 TODO:
-* Look through Lactation code, there is something wrong with it
+* Look through Lactation code, there is something wrong with it (TEST)
+
+
+* Sample coms
+* Foxberries pickup scene
+
 
 
 REWRITE OF GUI:
