@@ -7,7 +7,9 @@ CHANGELOG for Fall of Eden
 
 Version 0.3o
 ------------
-* 
+* Various bugfixes in new content.
+* Rosalin TFs:
+ - Moth TF.
 
 --------------------------------------------
              PREVIOUS VERSIONS
